<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".ui.product.DetailProductActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgDetail"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/cardview_shadow_start_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/productName"
                style="@style/TextBoldNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/productname"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgDetail" />

            <TextView
                android:id="@+id/productDetail"
                style="@style/TextNormalSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginStart="8dp"
                android:text="@string/productdescr"
                android:textColor="@color/hint"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/productName" />

            <TextView
                android:id="@+id/salesName"
                style="@style/TextNormalSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:text="Sleman, Ngaglik, Yogyakarta"
                android:textColor="@color/hint"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/productDetail"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tvHarga"
                style="@style/TextBoldSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:text="Harga : "
                android:textColor="@color/hint"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/salesName"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tvPrice"
                style="@style/TextBoldSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:text="@string/price"
                android:textStyle="bold"
                android:textColor="@android:color/holo_orange_light"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvHarga"
                android:visibility="gone"/>

            <Button
                android:id="@+id/btnBeli"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@android:color/holo_orange_light"
                android:text="BELI"
                android:layout_margin="8dp"
                android:visibility="gone"
                style="@style/TextBoldSmall"
                app:layout_constraintTop_toBottomOf="@+id/tvPrice"/>

            <Button
                android:id="@+id/btnEdit"
                android:visibility="gone"
                style="@style/TextBoldSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@android:color/holo_orange_light"
                android:text="Edit"
                app:layout_constraintTop_toBottomOf="@+id/btnBeli" />

            <Button
                android:id="@+id/btnDelete"
                style="@style/TextBoldSmall"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@android:color/holo_orange_light"
                android:text="Delete"
                app:layout_constraintTop_toBottomOf="@+id/btnEdit" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>