<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp"
    app:behavior_hideable="true"
    app:behavior_peekHeight="56dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    tools:ignore="MissingDefaultResource">

    <TextView
        android:id="@+id/tvTitle"
        style="@style/TextBoldNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="Detail Produk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/v"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="8dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/v"
        app:layout_constraintBottom_toTopOf="@+id/tvHargasht">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivIcon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/productNamesht"
                style="@style/TextBoldNormal"
                android:layout_width="278dp"
                android:layout_height="22dp"
                android:layout_marginTop="8dp"
                android:paddingHorizontal="8dp"
                android:text="@string/productname"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivIcon" />

            <TextView
                android:id="@+id/productDetailsht"
                style="@style/TextNormalNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="8dp"
                android:text="@string/productdescr"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/productNamesht" />

            <TextView
                android:id="@+id/tvSales"
                style="@style/TextBoldNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingHorizontal="8dp"
                android:text="Sales :"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/productDetailsht"
                android:visibility="gone"/>

            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                android:id="@+id/spinnerProduct"
                android:layout_width="160dp"
                android:layout_height="40dp"
                android:background="@drawable/round_solid_gray"
                android:gravity="center"
                app:hintText="pilih kota"
                app:layout_constraintBottom_toBottomOf="@+id/tvSales"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvSales"
                android:visibility="gone"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvSales"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerProduct"
                tools:itemCount="10"
                tools:listitem="@layout/item_sales"
                android:visibility="gone"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/tvHargasht"
        style="@style/TextBoldNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:paddingHorizontal="8dp"
        android:text="Harga : "
        app:layout_constraintBottom_toTopOf="@+id/btnBelisht"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tvPricesht"
        style="@style/TextBoldNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="8dp"
        android:text="@string/price"
        android:textColor="@android:color/holo_orange_light"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvHargasht"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btnBelisht"
        style="@style/TextBoldNormal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:background="@drawable/round_solid_yellow"
        android:text="Beli"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>